    * 3961 FIX: fixed error sections handling if parse function is available
    * 3831 FIX: ucd_cpu_util: no longer reports an UNKNOWN error when the counter data wasn't updated...
    * 3985 FIX: mrpe: fixed broken long output when using the CMC...
    * 4035 FIX: df_zos: Fixed ignoring last filesystem after new discovery...

    Multisite:
    * 3959 Two new filters for the comment view: author and comment text field
    * 3970 SEC: Fixed possible URL injection on index page...
    * 3971 Event Console: Event numbers are now also displayed in tactical overview snapin...
    * 3897 FIX: Fixed possible exception in raw edition when rendering graphs
    * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
    * 3902 FIX: Graph search view: Changing painter options made page empty
    * 3969 FIX: CentOS 5.5: Fixed incompatibility with the available OpenSSL 0.98...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3901 Logfile pattern analyser: pattern lists can now be searched
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...
    * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...

    Notifications:
    * 3957 mail: now allows extra HTML section between body and table
    * 3900 FIX: Notification analysis: Fixed wrong color for host notification states
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory: