@@ -1,0 +1,10 @@
+Title: omd_status: Fix labelling and structure of several metric graphs
+Level: 1
+Component: checks
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2
+Date: 1477561533
+
+
